# spc-spectra

./: .flake8  .gitignore  .ignore  Makefile  README.md  RELEASE-NOTES.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
spikes/: test.py
src/spc_spectra/: __init__.py  global_fun.py  spc.py  sub.py  subfile.py  utils.py
tests/: test.py  test_spc.py
